# thesis-adaptive-swarm-interfaces

./: .gitignore  docker-compose.yaml  pyproject.toml
research/cognitive_load_models/: pyproject.toml
research/cognitive_load_models/notebooks/: 01_explore_datasets.ipynb  02_preprocessing_pipeline.ipynb  03_features.ipynb  04_models.ipynb
research/cognitive_load_models/src/cognitive_models/: features.py  gaze_utils.py  interpolate.py  preprocessing.py  pupil_utils.py
services/eye_tracker/: pyproject.toml
services/eye_tracker/src/eye_tracker/: main.py
services/workload_inference/: command_line_usage.md  plots_overview.md  pyproject.toml
services/workload_inference/src/workload_inference/: api.py  constants.py  data_structures.py  experiment.py  generator.py  main.py  plot_feedback.py  plot_results.py  processing.py  py_receiver.py  test_data.py  utilities.py  visualize.py
services/workload_inference/src/workload_inference/experiments/: __init__.py  base.py  base_window.py  data_structures.py  manager.py  window.py
services/workload_inference/src/workload_inference/eye_metrics/: interpolate.py
services/workload_inference/src/workload_inference/inference/: __init__.py  engine.py  filters.py  settings.py
services/workload_models/: pyproject.toml
src/user_adaptive_swarm_interfaces/: data_structures.py  py_receiver.py
